# h2o-llmstudio

./: .dockerignore  .flake8  .gitignore  404.html  =2023.11.15  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.arm64-cuda  Dockerfile.bundle  LICENSE  Makefile  Pipfile  README.md  SPEC.md  about.md  app.py  app.toml.template  cfg.yaml  combined_docs.md  concepts.html  converter.py  distributed_train.sh  download_default_datasets.py  entrypoint.sh  experiment_summary_code_template.md  faqs.html  file-name-paths.py  index.html  key-terms.html  model_card_template.md  opensearch.xml  package-lock.json  prompt.py  publish_to_hugging_face.py  pyproject.toml  qodana.yaml  requirements.txt  requirements_test.txt  (+5 more)
.beads/: issues.jsonl
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md  code-improvement.md  doc-request.md  feature-request.md
.github/workflows/: build-and-push-nightly.yml  build-and-push-release-aws.yml  build-and-push-release-bundle-mc.yml  build-and-push-release-bundle.yml  build-and-push-release-gar.yml  build-and-push-release-gcr.yml  build-and-push-release.yml  build-and-push.yml  build-docker-and-run.yml  build-docker.yml  combined-docs-md-ci.yml  deploy-to-github-pages.yml  lint.yml  requirements.yml  setup-dev-workflow.yml  snyk-scan.yml  style.yml  test.yml  test_nightly.yml  test_ui.yml
app_utils/: cards.py  config.py  config_parsing_utils.py  db.py  handlers.py  hugging_face_utils.py  initializers.py  migration.py  utils.py  wave_utils.py
app_utils/sections/: chat.py  common.py  dataset.py  experiment.py  home.py  project.py  settings.py
app_utils/utils/: setting_utils.py  utils.py
assets/css/: styles.2214709f.css  styles.be3f536b.css  styles.cf8cadac.css
assets/js/: 100d9ca9.1e26b295.js  100d9ca9.389eb0b5.js  100d9ca9.39791a80.js  100d9ca9.828a3286.js  100d9ca9.91638c9b.js  100d9ca9.91c5fe7e.js  100d9ca9.95dcc5ed.js  100d9ca9.96125e9c.js  100d9ca9.9dc0178e.js  100d9ca9.aeb00400.js  100d9ca9.b55c687a.js  100d9ca9.b5864643.js  100d9ca9.db05fb82.js  137dcc93.a7c94a94.js  137dcc93.d690fafa.js  158.1960ba51.js  161.0dd8bd16.js  161.4cc021c9.js  161.8cf8d21f.js  161.d6c3804c.js  161.f5c69afe.js  17896441.151459d8.js  17896441.ab6cc5e4.js  1a4e3797.aca56219.js  1a4e3797.c8d269d6.js  1a4e3797.d54858f9.js  1be78505.cd0be966.js  1be78505.d9c7dc59.js  1be78505.f304e05b.js  1be78505.f8f50957.js  1ffdd7de.001cd6b0.js  1ffdd7de.02c66053.js  1ffdd7de.17ad799a.js  1ffdd7de.209c2fe9.js  1ffdd7de.235355b1.js  1ffdd7de.66cfaf19.js  1ffdd7de.a58de735.js  1ffdd7de.a777b8f8.js  1ffdd7de.a8d52f9c.js  1ffdd7de.d0d32d2c.js  (+192 more)
docs/: arm64_dependencies.md  arm64_implementation_plan.md  arm64_port_summary.md  parameters.md
documentation/: .gitignore  README.md  combined_docs 3.md  combined_docs.md  makersaurus.config.js  package-lock.json  package.json  sidebars.js
documentation/docs/: concepts.md  faqs.md  index.md  key-terms.md  release-notes.md
examples/: cfg_example_oasst1.py  cfg_example_oasst2.py  example_oasst2.yaml
get-started/: core-features.html  llm-studio-flow.html  llm-studio-performance.html  set-up-llm-studio.html  videos.html  what-is-h2o-llm-studio.html
guide/datasets/: data-connectors-format.html  import-dataset.html  merge-datasets.html  view-dataset.html
guide/experiments/: compare-experiments.html  create-an-experiment.html  evaluate-model-using-llm.html  experiment-settings.html  export-trained-model.html  import-to-h2ogpt.html  supported-problem-types.html  view-an-experiment.html
jenkins/: install_llm_studio_ubuntu2004.sh  llm-studio-aws.json  llm-studio-azure.json  llm-studio-cloud-images.groovy  llm-studio-gcp.json
jenkins/packer/: README.md  install_llm_studio_ubuntu2004.sh  llm-studio-aws.json  llm-studio-azure.json  llm-studio-cloud-images.groovy  llm-studio-gcp.json
latest/: index.html
llm_studio/: app.py  prompt.py  publish_to_hugging_face.py  train.py  train_wave.py
llm_studio/app_utils/: cards.py  config.py  db.py  default_datasets.py  handlers.py  hugging_face_utils.py  initializers.py  license.py  setting_utils.py  utils.py  wave_utils.py
llm_studio/python_configs/: base.py  cfg_checks.py  text_causal_classification_modeling_config.py  text_causal_language_modeling_config.py  text_causal_regression_modeling_config.py  text_dpo_modeling_config.py  text_rlhf_language_modeling_config.py  text_rlhfl_language_modeling_config.py  text_rlhfl_modeling_config.py  text_sequence_to_sequence_modeling_config.py
llm_studio/src/: h2oai_pipeline_template.py  loggers.py  nesting.py  optimizers.py  order.py  possible_values.py  schedulers.py  tooltips.py  train.py  train_wave.py
model_cards/: experiment_summary_code_template.md  text_causal_classification_experiment_summary_card_template.md  text_causal_classification_model_card_template.md  text_causal_language_modeling_experiment_summary_card_template.md  text_causal_language_modeling_model_card_template.md  text_causal_regression_experiment_summary_card_template.md  text_causal_regression_model_card_template.md  text_sequence_to_sequence_modeling_experiment_summary_card_template.md  text_sequence_to_sequence_modeling_model_card_template.md
prompts/: eval_template.txt  general.txt  rag.txt
prompts/mt-bench/: general.txt  reference.txt
scripts/: validate_arm64_cuda.py  validate_arm64_mps.py
tests/app_utils/: test_license.py  test_setting_utils.py
tests/datasets/: test_conversation_chain_handler.py  test_text_causal_language_modeling_ds.py
tests/integration/: test_causal_binary_classification_modeling_cfg.yaml  test_causal_binary_classification_modeling_cpu_cfg.yaml  test_causal_language_modeling_oasst_cfg.yaml  test_causal_language_modeling_oasst_cpu_cfg.yaml  test_causal_multiclass_classification_modeling_cfg.yaml  test_causal_multiclass_classification_modeling_cpu_cfg.yaml  test_causal_multilabel_classification_modeling_cfg.yaml  test_causal_multilabel_classification_modeling_cpu_cfg.yaml  test_causal_regression_modeling_cfg.yaml  test_causal_regression_modeling_cpu_cfg.yaml  (+5 more)
tutorials/: tutorial-1a.html  tutorial-2a.html
(+303 files in other folders)
