[project]
name = "h2o-llmstudio"
version = "1.14.7"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.10.*"
dependencies = [
    # Note: NVIDIA CUDA dependencies (nvidia-cuda-*, nvidia-cudnn-*, etc.) are
    # transitive dependencies from torch. Platform-specific torch installation
    # is handled via tool.uv.sources and tool.uv.index configuration below.
    "torch==2.7.1",
    "tqdm>=4.65.0,<5.0.0",
    "transformers==4.56.1",
    "numpy>=1.26.0, <2.0.0",
    "pandas>=2.2.0, <3.0.0",
    "scikit-learn>=1.5.1, <2.0.0",
    "boto3>=1.20.24, <2.0.0",
    "SQLAlchemy>=2.0.25, <3.0.0",
    "dill>=0.3.8, <0.4.0",
    "pyarrow>=14.0.1",
    "kaggle>=1.7.4, <2.0.0",
    "coolname>=2.2.0, <3.0.0",
    "bokeh>=3.5.0, <4.0.0",
    "beautifulsoup4>=4.11.1, <5.0.0",
    "diskcache==5.6.3",
    "sentencepiece>=0.2.0, <0.3.0",
    "sacrebleu==2.5.1",
    "toml>=0.10.2, <0.11.0",
    "pyyaml>=6.0.0, <7.0.0",
    "protobuf>=3.20.3",
    "fastparquet>=2023.7.0",
    "gputil>=1.4.0, <2.0.0",
    "huggingface-hub==0.34.4",
    "bitsandbytes==0.47.0 ; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "accelerate==1.10.1",
    "openai>=1.12.0, <2.0.0",
    "einops==0.8.1",
    "datasets>=4.4.1, <5.0.0",
    "neptune>=1.10.4, <2.0.0",
    "wandb>=0.23.1, <1.0.0",
    "Jinja2>=3.1.3, <4.0.0",
    "h2o-drive>=3.0.0, <4.0.0",
    "h2o-wave>=1.7.6, <2.0.0",
    "tiktoken==0.9.0",
    "hf-transfer==0.1.9",
    "peft==0.17.1",
    "azure-storage-file-datalake>=12.12.0",
    "deepspeed==0.17.5",
    "keyring>=25.2.1, <26.0.0",
    "pydantic>=2.8.2, <3.0.0",
]

[dependency-groups]
dev = [
    "coverage==7.5.1",
    "mypy==1.10.0",
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "pytest-dependency==0.6.0",
    "pytest-html>=4.1.1, <5.0.0",
    "types-pyyaml>=6.0",
    "types-requests>=2.31",
    "types-toml>=0.10",
    "wheel==0.43.0",
    "pytest-bdd==7.1.2",
    "pytest-base-url==2.1.0",
    "pytest-mock==3.14.0",
    "hac_playwright",
]

[project.optional-dependencies]
# flash-attn requires CUDA and does not work on macOS
flash = ["flash-attn==2.8.3 ; sys_platform != 'darwin'"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
# Allow selecting best package version across all indexes
# This resolves conflicts when PyTorch cu128 index has older versions
# of common packages (e.g., requests) than PyPI
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = { index = "pytorch" }
hac_playwright = { url = "https://h2oai-qa-test-assets.s3.amazonaws.com/wheels/h2o_playwright/hac_playwright-1.48.0-py3-none-any.whl" }

[[tool.uv.index]]
name = "pytorch"
# CUDA 12.8 index provides wheels for Linux x86_64 and ARM64 (aarch64) platforms
# ARM64 wheels: manylinux_2_17_aarch64 (for NVIDIA ARM64 + CUDA on Linux)
# x86_64 wheels: manylinux_2_17_x86_64 (for standard NVIDIA CUDA on Linux)
#
# macOS ARM64 MPS support:
# - cu128 index does not provide macOS wheels (CUDA not available on macOS)
# - uv will fall back to PyPI for macOS, which provides PyTorch with MPS backend
# - MPS (Metal Performance Shaders) is built into standard PyPI PyTorch for macOS
# - explicit=false allows fallback to PyPI when platform-specific wheel not found
url = "https://download.pytorch.org/whl/cu128/"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".tox",
    ".venv",
    ".svn",
    "_build",
    "buck-out",
    "build/",
    "dist/",
    "output/",
    "data/",
    "tests/",
]

[tool.ruff.format]
quote-style = "double"            # Like Black, use double quotes for strings.
indent-style = "space"            # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false # Like Black, respect magic trailing commas.
line-ending = "auto"              # Like Black, automatically detect the appropriate line ending.

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # Pyflakes
    # "UP", # pyupgrade
    # "B",  # flake8-bugbear
    # "C4", # comprehensions
    # "SIM",  # flake8-simplify
    "I",   # isort
    # "ERA", # eradicate
    # "T20", # print
    # "PL",  # pylint
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
strict_optional = false
exclude = "(build|output|data|tests)"

[tool.pytest.ini_options]
markers = [
    "arm64_cuda: Tests specific to ARM64 architecture with NVIDIA CUDA backend (Linux aarch64 + CUDA)",
    "arm64_mps: Tests specific to ARM64 architecture with Apple Metal Performance Shaders (macOS + MPS)",
    "x86_64: Tests specific to x86_64 architecture",
    "requires_gpu: Tests that require GPU hardware (CUDA or MPS)",
    "requires_cuda: Tests that specifically require NVIDIA CUDA",
    "requires_mps: Tests that specifically require Apple MPS",
]
